--- a/partials/list.html
+++ b/partials/list.html
@@ -9,7 +9,6 @@
 				<option value="reknown">Reknown</option>
 			</select>
 		</label>
-
 		<label class="formgroup">
 			<input type="radio" ng-model='direction' name='direction' checked>ascending
 		</label>
@@ -18,12 +17,14 @@
 		</label>
 	</div>
 	<ul class="artistlist">
-			<li class="artist cf" ng-repeat="item in artists | filter: {name: query} | orderBy: artistOrder:direction">
+		<li class="artist cf" ng-repeat="item in artists | filter: {name: query} | orderBy: artistOrder:direction">
+			<a href="#/details/{{artists.indexOf(item)}}">
 				<img ng-src="images/{{item.shortname}}_tn.jpg" alt="Photo of {{item.name}}">
 				<div class="info">
 					<h2>{{item.name}}</h2>
 					<h3>{{item.reknown}}</h3>
 				</div>
-			</li>
-		</ul>
+			</a>
+		</li>
+	</ul>
 </section>
